Wed Apr 14 12:13:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.h:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp:
          Resolved compile issue. Also extended test.

        * connectors/dds4ccm/tests/SetConnectorAttributes/descriptors/Plan.cdp:
          Reset domain_id.

Wed Apr 14 11:59:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/Exceptions/Base/ExceptionT.mpc
        Changes some includes.

Wed Apr 14 10:14:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/InstanceHandleManager_T.h:
        * connectors/dds4ccm/impl/dds/InstanceHandleManager_T.cpp:
          No narrow in the critical code path.

        * connectors/dds4ccm/tests/CoherentUpdater/descriptors/Plan.cdp:
          Removed connector status listener connection since
          it wasn't used.

Wed Apr 14 09:49:12 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/Getter_T.h:
        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
        * connectors/dds4ccm/impl/dds/Reader_T.h:
        * connectors/dds4ccm/impl/dds/Reader_T.cpp:
          No narrow in the critical code path.

Wed Apr 14 08:44:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/Exceptions/Receiver/ExceptionT_Receiver.mpc
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender.mpc
        Change to long project names.

Wed Apr 14 07:29:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.h:
          Removed obsolete include

        * ciao/Servants/Servant_Impl_Base.cpp:
          Removed unneeded return after throw

        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
          layout changes for debug message
