@@ -95,7 +95,7 @@ DDS_Listen_T<DDS_TYPE, CCM_TYPE, FIXED>::activate (
         }
       this->ccm_dds_reader_.set_listener (
         this->data_listener_.in (),
-        PortStatusListener::get_mask (status));
+        DataReaderListener::get_mask (listener));
     }
   catch (...)
     {
